Added stopped_propagation condition at input_method_minial

It added event->stopped_propagation() condition at input_method_minimal
to avoid inserting character when stopped_propagation is set while
DispatchKeyEventPostIME is working. input_method_minial works on Ozone
with wayland.
It also added input_method_minimal_unittests.cc and introduced
'InputMethodMinimalTest.StopPropagationTest' to verify that
character's not inserted to text input when the event is
set with stopped_propagation.

TEST=ui_base_unittests

Bug: 843924, 578890
Change-Id: I2d8f6d408a04cd7affd8089157b7b0efa07379d5
Reviewed-on: https://chromium-review.googlesource.com/1063417
Reviewed-by: Shu Chen <shuchen@chromium.org>
Commit-Queue: Julie Jeongeun Kim <jkim@igalia.com>
Cr-Commit-Position: refs/heads/master@{#562332}
Former-commit-id: 62190d478a25e16cf3f18326026a0d1bd8b63c64