ui/base/ime/input_method_minimal.cc
@@ -27,7 +27,7 @@ ui::EventDispatchDetails InputMethodMinimal::DispatchKeyEvent(
 
   // Insert the character.
   ui::EventDispatchDetails dispatch_details = DispatchKeyEventPostIME(event);
-  if (!dispatch_details.dispatcher_destroyed &&
+  if (!event->stopped_propagation() && !dispatch_details.dispatcher_destroyed &&
       event->type() == ET_KEY_PRESSED && GetTextInputClient()) {
     const uint16_t ch = event->GetCharacter();
     if (ch) {
